# BIND

./: .dockerignore  .gitignore  .mailmap  AGENTS.md  BIND_FULL_AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FUTURE_ENHANCEMENTS.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_v1.0.0.md  abmg_root.py  build_beta.ps1  config.env.example  docker-compose.yml  linux_run.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.governance/: COMPLETION_REPORT_PROMPT.md  REMOTE_AUDIT.md
.serena/: project.yml
deployment/: abmg-daemon.service  abmg-rss.service  bind-rss.service  bind.service
docker/: Dockerfile.single  entrypoint.sh
docs/: ARCHITECTURE.md  BIND_IMPLEMENTATION_GUIDE.md  CLEANUP_GUIDE.md  CONFIGURATION.md  FAQ.md  RELEASES.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
install/: install.sh
research/: # Research Prompt_ Versioning &amp; Release Standa.md  Automated Media Aggregation Systems A Technical Analysis of Architectural Paradigms, Protocol Interoperability, and Algorithmic Curation.txt  Automated Metadata Retrieval and Magnet URI Acquisition Architectures for AudioBookBay.txt  Browser Extension Release Standards Guide.txt  project_structure_guide.md
scripts/: README.md  cleanup-host.sh  cleanup-proxmox-host.sh  demo_server.py  install-interactive.sh  install-proxmox-lxc.sh  install.sh  test-lxc-create.sh  update.sh
src/: __main__.py  bind.py  config_manager.py  gui.py  healthcheck.py  rss_server.py  rss_server.py.backup  security.py
tests/: conftest.py  (+26 more)
(+130 files in other folders)
