[project]
name = "bind"
version = "1.2.1"
description = "Book Indexing Network Daemon - Audiobook metadata archival"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cloudscraper==1.2.71",
    "beautifulsoup4==4.12.3",
    "click==8.1.7",
    "lxml==6.0.2",
    "schedule==1.2.2",
    "flask==3.0.0",
    "curl_cffi==0.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
bind = "src.bind:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line length handled separately

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "cloudscraper",
    "bs4",
    "schedule",
    "flask",
    "curl_cffi.*"
]
ignore_missing_imports = true
